# asr-system

./: .dockerignore  .env.example  .flake8  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile.batch  Dockerfile.online  LICENSE  README.md  draft.md  objective.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml  release-images.yml
dags/: nightly_batch.py
deploy/airflow/: README.md  docker-compose.yml
deploy/production/: docker-compose.yml
docs/: ml-system-design-asr-callcenter-mvp-v1-official.md  ml-system-design-asr-callcenter-mvp-v1.md
docs/raw/: MLSDD-draft-v1.md  final-acceptance-checklist.md  ml-system-doc-v1.md  secrets-management.md
scripts/batch/: run_nightly.sh
scripts/deploy/: deploy_remote.sh  rollback_remote.sh
services/batch/: __init__.py  main.py
services/online/: __init__.py  main.py
src/asr_system/: __init__.py  config.py
src/asr_system/application/: __init__.py
src/asr_system/application/use_cases/: __init__.py  batch_process_calls.py  get_call_card.py  list_calls.py  process_call.py
src/asr_system/domain/: __init__.py  entities.py  ports.py  services.py  value_objects.py
src/asr_system/infrastructure/: __init__.py
src/asr_system/infrastructure/asr/: __init__.py  mock_asr.py
src/asr_system/infrastructure/emotion/: __init__.py  rule_based.py
src/asr_system/infrastructure/ingest/: __init__.py  local_fs.py
src/asr_system/infrastructure/repositories/: __init__.py  json_store.py
src/asr_system/interfaces/: __init__.py
tests/unit/: test_domain_services.py  test_json_repositories.py  test_use_cases.py
(+6 files in other folders)
